# rive-rust

./: .gitattributes  .gitignore  .gitmodules  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md  ROADMAP.md  SECURITY.md
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  windows.yml
assets/: 26116-48795-animating-draw-order.riv  README.md
crates/bevy-rive/: Cargo.toml  build.rs
crates/bevy-rive/src/: assets.rs  audio.rs  input.rs  lib.rs  nested.rs  rig.rs  text.rs  view_model.rs  zero_copy.rs
crates/rive-renderer/: Cargo.toml
crates/rive-renderer-sys/: Cargo.toml  build.rs
crates/rive-renderer-sys/shim/: rive_shim.cpp  rive_shim.h  rive_shim_audio.cpp  rive_shim_input.cpp  rive_shim_internal.hpp  rive_shim_nested.cpp  rive_shim_rig.cpp  rive_shim_text.cpp  rive_shim_viewmodel.cpp
crates/rive-renderer-sys/src/: lib.rs
crates/rive-renderer/src/: assets.rs  audio.rs  input.rs  lib.rs  nested.rs  rig.rs  scene.rs  text.rs  value.rs  view_model.rs
docs/: M0_REPORT.md  M1A_REPORT.md  M1B_CLOSEOUT.md  M1B_REPORT.md  M1_0_REPORT.md  M2A_REPORT.md  M2B_REPORT.md  M2C_CLOCKWISE.md  M2_0_REPORT.md  M2_VERIFICATION.md  M3_0_D3D12_SPIKE.md  M_PKG_1_PACKAGING.md  architecture.md  feature-support.md  initial_reasoning.txt
docs/design/: M1A_DESIGN_SPEC.md  M1B_DESIGN_SPEC.md  M_SCALE_ATLAS_BATCHING.md
docs/perf/: m2a_step0_raw.txt  m2a_step1_raw.txt  m2b_step1_raw.txt  m2b_step2_raw.txt  m2c_perf_raw.txt  m2c_validation.txt  m2v_attestation.txt  m3_0_d3d12_floor.txt  mscale_phase_split_raw.txt
examples/: atlas_tiles.rs  interactive.rs  interactive_external_audio.rs  nimai_face.rs  offscreen_png.rs  sprite_riv.rs  sprite_riv_zerocopy.rs  voxelien_face.rs
scripts/: run-windows-nimai.cmd  run-windows-voxelien.cmd  run_voxelien_face.sh  sync_to_windows.sh  win.cmd
tools/: archive_prebuilt.sh  fetch_premake.cmd  fetch_premake.sh  png_diff.py
