[package]
name = "bevy-rive"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Bevy plugin for the native Rive Renderer (offscreen render + CPU-copy bridge, M1a)."
publish = false

[features]
# `floor` (default) — the M1a CPU-copy tier: a near-drop-in Bevy plugin with NO
# `ash`, NO `wgpu-hal`, NO exact wgpu pin and NO `as_hal` code. It depends only on a
# caret `bevy = "0.18"` plus a caret `wgpu-types` (named only because `bevy_image`
# does not re-export `Image::new`'s `Extent3d`/`TextureFormat`/`TextureDimension`;
# the caret unifies with whatever `wgpu-types` the host Bevy already links). This is
# the loosely-coupled path a normal game project drops in like any other plugin.
default = ["floor"]
floor = ["dep:wgpu-types"]

# M1b zero-copy Vulkan tier (opt-in; version-LOCKED — see the fail-fast guard in
# `src/zero_copy.rs` + `build.rs`). Adds the render-world bridge: a Render Graph node
# that drives the native Rive renderer directly into a wgpu-allocated VkImage
# (no per-frame CPU readback), device sharing via Bevy's `raw_vulkan_init`
# callback (to enable VK_EXT_fragment_shader_interlock), and raw Vulkan handle
# extraction via `as_hal`. Without this feature, `bevy-rive` is the M1a CPU-copy
# floor only and stays tiny (bevy_asset + bevy_image + bevy_log).
#
# Pulls `bevy/raw_vulkan_init` (which itself enables `wgpu/vulkan`) + the render
# and core-pipeline crates (RenderApp, render graph, Core2d/Node2d labels), and
# the wgpu-hal/ash crates for handle extraction. wgpu/wgpu-hal are pinned to
# exactly Bevy 0.18.1's (27.0.1 / 27.0.4) so the hal types match across the FFI.
zero_copy = [
    "dep:wgpu",
    "dep:wgpu-hal",
    "dep:ash",
    "bevy/bevy_render",
    "bevy/bevy_core_pipeline",
    "bevy/raw_vulkan_init",
]

[dependencies]
rive-renderer = { path = "../rive-renderer" }
# The plugin only defines an asset + loader, ECS components/systems, and fills a
# Bevy `Image` — no render-side code (display is user-side via `Sprite`). So it
# needs just the asset + image stack, not the sprite/render crates or winit.
bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_image",
    "bevy_log",
] }
# `Image::new` takes `wgpu_types::{Extent3d, TextureDimension, TextureFormat}` directly,
# and `bevy_image` does NOT re-export them (a private `use` in its image.rs). The floor
# names `wgpu-types` only for these three types; a CARET (not an exact pin) lets Cargo
# unify it with whatever `wgpu-types` the host Bevy links (one 27.x in the tree), so the
# floor stays loosely coupled. Optional + pulled by the `floor` feature only.
wgpu-types = { version = "27", optional = true }

# M1b zero-copy deps (optional; enabled by `zero_copy`). Pinned to Bevy 0.18.1's
# exact wgpu/wgpu-hal so `wgpu::hal::vulkan::*` and our `wgpu_hal::vulkan::Api`
# are the SAME types Bevy's RenderDevice exposes via `as_hal` (a version skew
# would make the hal handle types distinct and reject the extraction).
wgpu = { version = "=27.0.1", default-features = false, features = ["vulkan"], optional = true }
wgpu-hal = { version = "=27.0.4", default-features = false, features = ["vulkan"], optional = true }
ash = { version = "0.38", default-features = false, optional = true }

[dev-dependencies]
# The example is a full windowed app: window + winit + a Linux display backend +
# 2D sprite rendering + png encode. Feature-unified with the lib's bevy deps.
bevy = { version = "0.18.1", default-features = false, features = [
    "bevy_asset",
    "bevy_image",
    "bevy_log",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_window",
    "bevy_winit",
    "x11",
    "wayland",
    "png",
    "multi_threaded",
    "default_font",
] }
# Deterministic RGBA PNG dump of the offscreen Rive texture for inspection.
image = "0.25"

[[example]]
name = "sprite_riv"
path = "../../examples/sprite_riv.rs"
# The CPU-copy floor example; needs the (default) floor tier's plugin + systems.
required-features = ["floor"]

# Minimal live viewer for the Voxelien face (floor tier). Defaults to the signed
# published .riv so its scripts pass rive's signature gate.
[[example]]
name = "voxelien_face"
path = "../../examples/voxelien_face.rs"
required-features = ["floor"]

# Live viewer for the Nimai face (floor tier) that forwards the mouse cursor into
# the state machine so its pointer Listeners fire (eyes/head follow the cursor).
[[example]]
name = "nimai_face"
path = "../../examples/nimai_face.rs"
required-features = ["floor"]

# The M1b zero-copy example (requires the `zero_copy` feature + native Vulkan).
[[example]]
name = "sprite_riv_zerocopy"
path = "../../examples/sprite_riv_zerocopy.rs"
required-features = ["zero_copy"]

[lints]
workspace = true
