[package]
name = "rive-renderer-sys"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Raw FFI bindings to the native Rive Renderer (rive-runtime PLS, Vulkan) via a thin C shim."
publish = false
# `links` guarantees only one crate in the dependency graph links the native
# rive_shim archive (and, transitively, the rive-runtime static libs).
links = "rive_shim"
build = "build.rs"

[build-dependencies]
cc = "1"

[lints]
workspace = true
